--- a/PicoStreamingAssistantFTUDP/Pico4SAFTExtTrackingModule.csproj
+++ b/PicoStreamingAssistantFTUDP/Pico4SAFTExtTrackingModule.csproj
@@ -24,7 +24,11 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="XCOPY &quot;$(TargetDir)\Pico4SAFTExtTrackingModule.dll&quot; &quot;%appdata%\VRCFaceTracking\CustomLibs\4d885bd8-e97f-4e0d-be40-55c8503e0620&quot; /S /Y" />
+    <Copy
+      SourceFiles="$(TargetPath)"
+      DestinationFiles="$(APPDATA)\VRCFaceTracking\CustomLibs\$(TargetFileName)"
+      OverwriteReadOnlyFiles="True"
+      SkipUnchangedFiles="True" />
   </Target>
 
 </Project>
