Feature: instantiate legacy connector depending on PICO Connect config 1/2

--- a/PicoStreamingAssistantFTTests/PicoStreamingAssistantFTTests.csproj
+++ b/PicoStreamingAssistantFTTests/PicoStreamingAssistantFTTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="20.0.28" />
   </ItemGroup>
 
   <ItemGroup>
