--- a/PicoStreamingAssistantFTUDP/Pico4SAFTExtTrackingModule.csproj
+++ b/PicoStreamingAssistantFTUDP/Pico4SAFTExtTrackingModule.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="20.0.28" />
   </ItemGroup>
 
   <ItemGroup>
