--- a/PicoStreamingAssistantFTTests/PicoStreamingAssistantFTTests.csproj
+++ b/PicoStreamingAssistantFTTests/PicoStreamingAssistantFTTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="System.IO.Abstractions" Version="20.0.28" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="20.0.28" />
   </ItemGroup>
 
   <ItemGroup>
