Fix compilation with Visual Studio; Fix copy .dll to appdata if compiling with Visual Studio

--- a/PicoStreamingAssistantFTUDP/PicoStreamingAssistantFTUDP/Pico4SAFTExtTrackingModule.csproj
+++ b/PicoStreamingAssistantFTUDP/PicoStreamingAssistantFTUDP/Pico4SAFTExtTrackingModule.csproj
@@ -21,13 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../VRCFaceTracking/VRCFaceTracking.Core/VRCFaceTracking.Core.csproj" Private="False" />
+    <ProjectReference Include="..\..\VRCFaceTracking\VRCFaceTracking.Core\VRCFaceTracking.Core.csproj" Private="False" />
   </ItemGroup>
 
   <PropertyGroup>
     <ContinuousIntegrationBuild Condition="'$(TF_BUILD)' == 'true'">true</ContinuousIntegrationBuild>
     <ContinuousIntegrationBuild Condition="'$(GITHUB_ACTIONS)' == 'true'">true</ContinuousIntegrationBuild>
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <ContinuousIntegrationBuild Condition="'$(DOCKER_BUILD)' == 'true'">true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="Build" Condition="'$(ContinuousIntegrationBuild)' != 'true'">
