--- a/PicoStreamingAssistantFTUDP/PicoStreamingAssistantFTTests/PicoStreamingAssistantFTTests.csproj
+++ b/PicoStreamingAssistantFTUDP/PicoStreamingAssistantFTTests/PicoStreamingAssistantFTTests.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="JunitXml.TestLogger" Version="3.0.114" />
   </ItemGroup>
 
   <ItemGroup>
